fix: fixing a bug with modal overflow

--- a/menu-frontend/src/index.css
+++ b/menu-frontend/src/index.css
@@ -26,8 +26,9 @@ body {
   background-color: var(--quaternary-color);
 }
 
-/*MODAL STYLIZATION*/
 
+
+/*MODAL STYLIZATION*/
 .modal-overlay {
   position: absolute;
   top: 0;
@@ -36,8 +37,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: rgba(139, 139, 139, 0.441);
 
   & .modal-body {
